fixing staistic section mobile responsivness issues

--- a/src/app/pages/impact-dev/statistics/stat.scss
+++ b/src/app/pages/impact-dev/statistics/stat.scss
@@ -9,8 +9,12 @@
         top: 0rem;
         width: 100%;
     }
-    @media (min-width: 768px) and (max-width: 1024px) {
+    @media (min-width: 601px) and (max-width: 1024px) {
         height: 470px;
+        overflow: hidden;
+        position: relative;
+        top: 0rem;
+        width: 100%;
     }
     @include width-up-to($phone-max) {
         height: 500px;
@@ -22,49 +26,50 @@
 
 .statbox {
 
-        margin-left: 7%;
-        margin-top: 7%;
-    
+        height: 550px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @media (min-width: 601px) and (max-width: 961px) {
+            height: 472px;
+            justify-content: flex-start;
+            overflow-y: hidden;
+            overflow-x: scroll;
+            margin-left: 2%;
+            margin-right: 2%;
+        }
     @include width-up-to($phone-max) {
-        margin-top: 18%;
+        justify-content: flex-start;
         height: 430px;
         overflow-x: scroll;
         overflow-y: hidden;
         white-space: nowrap;
         ::-webkit-scrollbar {display: none; }
+        margin-left: 2%;
+        margin-right: 2%;
     }
-  
-
     @include wider-than(85rem) {
-        margin-left: 10%;
-        margin-top: 7%;
+
     }
     @include wider-than(100rem) {
-        margin-left: 14%;
-        margin-top: 6%;
+
     }
     @include wider-than(120rem) {
-        margin-left: 20%;
-        margin-top: 5%;
+
     }
     @include wider-than(160rem) {
-        margin-top: 3%;
-        margin-left: 28%;
+
     }
     @include wider-than(180rem) {
-        margin-top: 2%;
-        margin-left: 36%;
+
     }
     .col1 {
         background-image: url('/images/home/statmap1.png');
         background-size: 300px 180px;
         background-repeat: no-repeat;
-        height: 355px;
-        width: 261px;
-        float: left;
         border-radius: 3px; // background: linear-gradient(224.64deg, rgba(250,188,77,0) 0%, #FABC4D 100%), linear-gradient(0deg, #F4D019 0%, #F4D019 100%);	
         box-shadow: 0 15px 40px 0 rgba(0, 0, 0, 0.2);
-        @media (min-width: 768px) and (max-width: 1024px) {
+        @media (min-width: px) and (max-width: 1024px) {
             height: 323px;
             width: 210px;
             background-size: 300px 140px;
@@ -82,9 +87,6 @@
         background-size: 300px 180px;
         background-repeat: no-repeat;
         margin-left: 2%;
-        float: left;
-        height: 355px;
-        width: 261px;
         border-radius: 3px; //background: linear-gradient(224.64deg, rgba(250,188,77,0) 0%, #FABC4D 100%), linear-gradient(0deg, #F4D019 0%, #F4D019 100%);	
         box-shadow: 0 15px 40px 0 rgba(0, 0, 0, 0.2);
         @include width-up-to($phone-max) {
@@ -106,9 +108,6 @@
         background-size: 300px 180px;
         background-repeat: no-repeat;
         margin-left: 2%;
-        float: left;
-        height: 355px;
-        width: 261px;
         border-radius: 3px; //background: linear-gradient(224.64deg, rgba(250,188,77,0) 0%, #FABC4D 100%), linear-gradient(0deg, #F4D019 0%, #F4D019 100%);	
         box-shadow: 0 15px 40px 0 rgba(0, 0, 0, 0.2);
         @include width-up-to($phone-max) {
@@ -130,9 +129,6 @@
         background-size: 300px 180px;
         background-repeat: no-repeat;
         margin-left: 2%;
-        float: left;
-        width: 261px;
-        height: 355px;
         border-radius: 3px; //background: linear-gradient(224.64deg, rgba(250,188,77,0) 0%, #FABC4D 100%), linear-gradient(0deg, #F4D019 0%, #F4D019 100%);	
         box-shadow: 0 15px 40px 0 rgba(0, 0, 0, 0.2);
         @include width-up-to($phone-max) {
@@ -201,7 +197,7 @@
         padding-top: 4%;
         text-align: left;
         @include width-up-to($phone-max) {
-        
+        white-space: normal;
         height: 100px;
         }
     }
